--- a/app/views/game/index.html.slim
+++ b/app/views/game/index.html.slim
@@ -1,2 +1,13 @@
-h1 Game#index
-p Find me in app/views/game/index.html.slim
+h1 = "Welcome, #{@user_name}"
+
+h2 Create a new game
+h3 = link_to "Create Game", game_new_path
+
+h2 Pending Games
+- if @pending_games.length == 0
+  h3 There are no games available to join
+  h3 Try creating a new one
+- else
+  - @pending_games.each_with_index do |pending_game, index|
+    p = "Game ##{index + 1}: #{pending_game.players} total players, #{pending_game.players - [pending_game.users].length} open spots"
+    p = pending_game.users[0]
