--- a/app/views/game/show.html.slim
+++ b/app/views/game/show.html.slim
@@ -1,2 +1,6 @@
-h1 Game show
-h3 = @game.players
+h1 = "Waiting for #{@game.players - @game.users.length} more player(s) to join"
+h3 Players Joined:
+- @game.users.each do |user|
+  p = user.name
+
+h3 = link_to "Leave Lobby", game_leave_path(id: @game)
