--- a/app/views/games/show.html.slim
+++ b/app/views/games/show.html.slim
@@ -1,5 +1,5 @@
 - if @game.users.length == @game.players
-  = react_component('Game', {id: @game.id, playerName: @player_name, initialState: @initial_state})
+  = react_component('Game', {id: @game.id, playerName: @player_name, playerData: @initial_state})
 - else
   h1 = "Waiting for #{@game.players - @game.users.length} more player(s) to join"
   h3 Players Joined:
