Add game log to page

--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -60,7 +60,7 @@
 //   text-align: center;
 // }
 //
-// .log {
+// .gameLog {
 //   text-align: left;
 //   display: inline-block;
 //   position: fixed;
