--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -1,8 +1,5 @@
-.selected {
-  border-color: #eec64f;
-  border-width: 6px;
-  border-style: solid;
-  border-radius: 3px;
+body {
+  text-align: center;
 }
 
 img {
@@ -11,7 +8,7 @@ img {
 
 form {
   max-width: 600px;
-  margin: 100px auto;
+  margin: 50px auto;
   justify-content: center;
   text-align: center;
 }
@@ -52,7 +49,7 @@ label {
 }
 
 .deck {
-  margin: 50px auto;
+  margin: 20px auto;
   text-align:center;
 }
 
