Add pusher to other views, and make it so that when a player runs out of cards their turn gets skipped

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,6 +1,7 @@
 doctype html
 html
   head
+    script src="https://js.pusher.com/4.2/pusher.min.js"
     title
       | GoFishRails
     = csrf_meta_tags
@@ -8,5 +9,6 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag    'application'
+    = javascript_pack_tag    'pusher'
   body
     = yield
