--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -23,6 +23,15 @@ label {
   padding: 0 20px;
 }
 
+.error {
+  padding: 20px;
+  background-color: #D8000C;
+  color: #FFBABA;
+  max-width: 750px;
+  border-radius: 5px;
+  margin: 0 auto 15px auto;
+}
+
 .player {
   max-width: 550px;
   margin: 5px auto;
