--- a/app/views/games/new.html.slim
+++ b/app/views/games/new.html.slim
@@ -1,4 +1,5 @@
-h2 = notice
+- if notice
+  h2.error = notice
 h2 How many players do you want to play with?
 = form_for @game, url: games_url do |f|
   = f.label "Number of Total Players"
