--- a/app/views/games/show.html.slim
+++ b/app/views/games/show.html.slim
@@ -1,10 +1,10 @@
-- if @game.users.length == @game.players
+- if @game.waiting_for_players == 0
   = react_component('Game', {id: @game.id, playerData: @initial_state})
 - else
   - if @game.bots > 0
-    h1 = "All bots have joined. Waiting for #{@game.players - @game.users.length} more human player(s) to join"
+    h1 = "All bots have joined. Waiting for #{@game.waiting_for_players} more human player(s) to join"
   - else
-    h1 = "Waiting for #{@game.players - @game.users.length} more player(s) to join"
+    h1 = "Waiting for #{@game.waiting_for_players} more player(s) to join"
   h3 Players Joined:
   - @game.users.each do |user|
     p = user.name
