--- a/app/views/games/index.html.slim
+++ b/app/views/games/index.html.slim
@@ -4,8 +4,10 @@ h2 Create a new game
 h3 = link_to "Create Game", new_game_path
 
 h2 Pending Games
-- if @pending_games.length == 0
-  p There are no pending games.
-- else
-  - @pending_games.each_with_index do |pending_game, index|
-    p = link_to "Game ##{index + 1}: #{pending_game.players} total players, #{pending_game.waiting_for_players} open spots", games_join_path(pending_game), method: :post
+== render 'pending'
+
+h2 Games In Progress
+== render 'in_progress'
+
+h2 Finished Games
+== render 'finished_games'
