--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -24,12 +24,20 @@ label {
 }
 
 .error {
-  padding: 20px;
-  background-color: #D8000C;
-  color: #FFBABA;
-  max-width: 750px;
-  border-radius: 5px;
-  margin: 0 auto 15px auto;
+width: 400px;
+border: 1px solid #D8D8D8;
+padding: 5px;
+border-radius: 5px;
+font-family: Arial;
+font-size: 20px;
+background-color: #FFF9F2;
+color: #D30000;
+text-align: center;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
 }
 
 .player {
