--- a/app/views/games/new.html.slim
+++ b/app/views/games/new.html.slim
@@ -1,6 +1,6 @@
 - if notice
   div.center
-    div.error = notice
+    h1.error = notice
 h2 How many players do you want to play with?
 = form_for @game, url: games_url do |f|
   = f.label "Number of Total Players"
